# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["Kyle Madsen <kyle.mdsn@gmail.com>"]
edition = "2018"

[dependencies]
hello_crate = { path = "../hello_crate" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
